syntax = "proto3";

service RouteGuide {
  rpc RouteChat(stream RouteNote) returns (stream RouteNote) {}
}

message RouteNote {
  string location = 1;
  string message = 2;
}

